@@ -1,5 +1,5 @@
-<!ENTITY version "SVN-20120904">
-<!ENTITY releasedate "September 4, 2012">
+<!ENTITY version "SVN-20120905">
+<!ENTITY releasedate "September 5, 2012">
 <!ENTITY copyrightdate "1999-2012"><!-- jhalfs needs a literal dash, not &ndash; -->
 <!ENTITY milestone "7.3">
 <!ENTITY generic-version "development"> <!-- Use "development", "testing", or "x.y[-pre{x}]" -->
