@@ -1,3 +1,7 @@
+2012-09-05 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * Add udevadm trigger --action=change line to udev script
+     to support initramfs better
+
 2012-08-24 Bruce Dubbs <bdubbs@linuxfromscratch.org>
    * Read /etc/sysconfig/console when needed in rc
 
